Added paddle that kind of moves

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Brick Breaker</title>
     <link rel="stylesheet" href="index.css">
+    <script src="/scripts/jquery-3.4.1.min.js"></script>
 </head>
 
 <body>
@@ -39,6 +40,10 @@
     </ul>
 
     <div id="paddle"></div>
+
+    <script src="/scripts/paddle.js"></script>
+    <script src="/scripts/index.js"></script>
+    <script src="/scripts/main.js"></script>
 
 </body>
 
