--- a/index.html
+++ b/index.html
@@ -14,7 +14,47 @@
 
 <body>
 
-    <div id="paddle"></div>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  
+  <!-- Latest compiled JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <h1> Welcome to Brick Breaker</h1>
+  
+  <div>
+    <!-- Trigger the modal with a button -->
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
+  
+    <!-- Modal -->
+    <div id="myModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+  
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <div id="select_screen">
+              <button id="normal_mode" class="center-block btn btn-info btn-lg"> Normal Mode</button>
+              <br>
+              <button id="hard_mode" class="center-block btn btn-info btn-lg"> Hard Mode</button>
+              <br>
+              <button id="zen_mode" class="center-block btn btn-info btn-lg"> Zen Mode</button>
+            </div id="game_div">
+          </div>
+          <div class="modal-body">
+            <p>Some text in the modal.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+  
+      </div>
+    </div>
+  </div>
+  </div>
 
     <script src="/scripts/ball.js"></script>
     <script src="/scripts/brick.js"></script>
