--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Brick Breaker</title>
+    <title>Smitty's Bricks</title>
     <link rel="stylesheet" href="index.css">
     <script src="/scripts/jquery-3.4.1.min.js"></script>
     <!-- Bootstrap -->
