--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div id="paddle"></div>
-
+    <div id="ball"></div>
     <script src="/scripts/ball.js"></script>
     <script src="/scripts/brick.js"></script>
     <script src="/scripts/debuff.js"></script>
