--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
   </div>
   </div>
 
+    <div id="paddle"></div>
+    <div id="ball"></div>
     <script src="/scripts/ball.js"></script>
     <script src="/scripts/brick.js"></script>
     <script src="/scripts/debuff.js"></script>
