--- a/index.html
+++ b/index.html
@@ -4,35 +4,30 @@
 <head>
   <title>Smitty's Bricks</title>
   <link rel="stylesheet" href="index.css">
+  <link rel="shortcut icon" type=image/x-icon href="images/brickboi.ico">
   <script src="/scripts/jquery-3.4.1.min.js"></script>
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
-    crossorigin="anonymous"></script>
   <!-- Bootstrap theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
     integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <!-- Bootstrap script -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
+  <div>
+    <h1 id="score">___</h1>
+    <h1 id="lives">___</h1>
+  </div>
   <div id="paddle"></div>
   <div id="ball"></div>
   <div id="brick-container"></div>
 
-
-  <script src="/scripts/build/powerup.js"></script>
-  <script src="/scripts/build/debuff.js"></script>
-  <script src="/scripts/build/rectangle.js"></script>
-  <script src="/scripts/build/brick.js"></script>
-  <script src="/scripts/build/board.js"></script>
-  <script src="/scripts/build/paddle.js"></script>
-  <script src="/scripts/build/ball.js"></script>
-  <script src="/scripts/build/gamestate.js"></script>
-  <script src="/scripts/build/index.js"></script>
-
-  <!-- Opening Screen modal-->
+  <!-- Opening screen modal-->
   <div id="chooseGame" class="modal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -61,6 +56,17 @@
       </div>
     </div>
   </div>
+
+  <script src="/scripts/build/powerup.js"></script>
+  <script src="/scripts/build/debuff.js"></script>
+  <script src="/scripts/build/rectangle.js"></script>
+  <script src="/scripts/build/brick.js"></script>
+  <script src="/scripts/build/board.js"></script>
+  <script src="/scripts/build/paddle.js"></script>
+  <script src="/scripts/build/ball.js"></script>
+  <script src="/scripts/build/gamestate.js"></script>
+  <script src="/scripts/build/index.js"></script>
+
 </body>
 
 </html>
