Fixed spacebar exclusivity error, added hint text

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <body>
   <div>
     <h1 id="score">___</h1>
+    <h3 id="hints">___</h3>
     <h1 id="lives">___</h1>
   </div>
   <div id="paddle"></div>
