--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
               <button type="button" id='hardCore' class="btn btn-lg btn-default" data-dismiss="modal"
                 data-keyboard="true">Hardcore Mode</button>
             </div>
+            <div class="col-lg-4">
+              <button type="button" id='aiLab' class="btn btn-lg btn-default" data-dismiss="modal"
+                data-keyboard="true">AI LAB</button>
+            </div>
           </div>
         </div>
         <div class="modal-footer">
