--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <div id="paddle"></div>
   <div id="ball"></div>
   <div id="brick-container"></div>
+  <div id="powerup-container"></div>
 
 
   <script src="/scripts/build/powerup.js"></script>
