--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 </head>
 
 <body>
-  <div>
-    <h1 id="score">___</h1>
-    <h3 id="hints">___</h3>
-    <h1 id="lives">___</h1>
+  <div id="header-bar">
+    <span id="score">___</span>
+    <span id="hints">___</span>
+    <span id="lives">___</span>
   </div>
   <div id="paddle"></div>
   <div id="ball"></div>
@@ -53,6 +53,10 @@
             <div class="col-lg-4">
               <button type="button" id='aiLab' class="btn btn-lg btn-default" data-dismiss="modal"
                 data-keyboard="true">AI LAB</button>
+            </div>
+            <div class="col-lg-4">
+              <button type="button" id='levelEditor' class="btn btn-lg btn-default" data-dismiss="modal"
+                data-keyboard="true">Level Editor</button>
             </div>
           </div>
         </div>
