Quick formatting change

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Smitty's Bricks</title>
   <link rel="stylesheet" href="index.css">
-  <link rel="shortcut icon" type=image/x-icon href="images/brickboi.ico">
+  <link rel="shortcut icon" type=image/x-icon href="./images/brickboi.ico">
   <script src="/scripts/jquery-3.4.1.min.js"></script>
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
