--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
   <script src="/scripts/build/paddle.js"></script>
   <script src="/scripts/build/ball.js"></script>
   <script src="/scripts/build/gamestate.js"></script>
+  <script src="/scripts/build/ai.js"></script>
   <script src="/scripts/build/index.js"></script>
 
 </body>
