Fix and integrate powerup placement into level editor

--- a/index.html
+++ b/index.html
@@ -39,12 +39,9 @@
       <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Powerup Type
         <span class="caret"></span></button>
       <ul class="dropdown-menu">
-        <li><a href="#">Long paddle</a></li>
         <li><a href="#">Instant break</a></li>
-        <li><a href="#">Force field</a></li>
-        <li><a href="#">Fast paddle</a></li>
-        <li><a href="#">Lasers</a></li>
-        <li><a href="#">Double score</a></li>
+        <li><a href="#">Forcefield</a></li>
+        <li><a href="#">Extended paddle</a></li>
       </ul>
     </div>
   </div>
