Add custom level play screen and fix merge error

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Powerup Type
         <span class="caret"></span></button>
       <ul class="dropdown-menu">
-        <li><a href="#">Instant break</a></li>
-        <li><a href="#">Forcefield</a></li>
-        <li><a href="#">Extended paddle</a></li>
+        <li><a href="#">Super Strength</a></li>
+        <li><a href="#">Solid Floor</a></li>
+        <li><a href="#">Big Paddle</a></li>
       </ul>
     </div>
   </div>
@@ -70,6 +70,8 @@
               id="hardCore">Hardcore Mode</button>
             <button type="button" class="list-group-item list-group-item-action" data-dismiss="modal" id="aiLab">AI
               Lab</button>
+            <button type="button" class="list-group-item list-group-item-action" data-dismiss="modal" 
+              id="customLevelMode">Custom Level Mode</button>
             <button type="button" class="list-group-item list-group-item-action" data-dismiss="modal"
               id="levelEditor">Level Editor</button>
           </div>
