--- a/index.html
+++ b/index.html
@@ -19,15 +19,18 @@
 </head>
 
 <body>
+  <!-- Game header -->
   <div id="game-header-bar" class="header-bar">
     <span id="score" class="header-bar-left"></span>
     <span id="hints" class="header-bar-hint"></span>
     <span id="lives" class="header-bar-right"></span>
   </div>
+  <!-- Editor header-->
   <div id="level-editor-header-bar" class="header-bar">
     <div id="level-editor-brick-strength" class="header-bar-left dropdown">
       <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Brick Strength
         <span class="caret"></span></button>
+      <!-- Editor dropdown -->
       <ul class="dropdown-menu">
         <li><a href="#">1</a></li>
         <li><a href="#">2</a></li>
@@ -38,6 +41,7 @@
     <div id="level-editor-powerup-type" class="header-bar-right dropdown">
       <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Powerup Type
         <span class="caret"></span></button>
+      <!-- Powerup dropdown -->
       <ul class="dropdown-menu">
         <li><a href="#">Super Strength</a></li>
         <li><a href="#">Solid Floor</a></li>
@@ -45,6 +49,7 @@
       </ul>
     </div>
   </div>
+  <!-- Game items -->
   <div id="game-container">
     <div id="paddle"></div>
     <div id="ball"></div>
@@ -70,10 +75,10 @@
               id="hardCore">Hardcore Mode</button>
             <button type="button" class="list-group-item list-group-item-action" data-dismiss="modal" id="aiLab">AI
               Lab</button>
-            <button type="button" class="list-group-item list-group-item-action" data-dismiss="modal" 
-              id="customLevelMode">Custom Level Mode</button>
             <button type="button" class="list-group-item list-group-item-action" data-dismiss="modal"
               id="levelEditor">Level Editor</button>
+            <button type="button" class="list-group-item list-group-item-action" data-dismiss="modal" 
+            id="customLevelMode">Custom Level Mode</button>
           </div>
         </div>
       </div>
